--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-scripts": "4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
