--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.2.1",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.15",
     "@types/styled-components": "^5.1.7"
   }
 }
