--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "hotkeys-js": "^3.8.1",
     "react": "^17.0.1",
     "react-device-detect": "^1.15.0",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
+    "react-hotkeys-hook": "^3.0.3",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux-devtools-extension": "^2.13.8",
