--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.15",
