--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,15 @@
     },
     "jsx": true
   },
-  "plugins": ["@typescript-eslint", "prettier", "import", "jsx-a11y", "react", "react-hooks"],
+
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "import",
+    "jsx-a11y",
+    "react",
+    "react-hooks"
+  ],
   "settings": {
     "import/resolver": {
       "node": {
@@ -43,6 +51,7 @@
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-this-alias": "off",
     "@typescript-eslint/no-unused-vars": "off",
