--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,19 @@ jobs:
         run: yarn
       - name: Building App
         run: yarn run build
+  cypress_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Increase Watchers
+        run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+      - name: Installing Dependencies
+        run: yarn
+      - name: Starting Server
+        run: yarn start & npx wait-on http://localhost:3000
+      - name: Run Cypress
+        run: yarn run cy:run
   preview_deploy:
     runs-on: ubuntu-latest
     steps:
