--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,21 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 jobs:
+  cypress_test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Increase Watchers
+        run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+      - name: Installing Dependencies
+        run: yarn
+      - name: Starting Server
+        run: yarn start & npx wait-on http://localhost:3000
+      - name: Run Cypress
+        run: yarn run cy:run
   deploy:
+    needs: cypress_test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,3 +30,15 @@ jobs:
         run: npm install -g firebase-tools
       - name: Deploying to Firebase
         run: firebase deploy --token "${{ secrets.FIREBASE_SECRET }}"
+  e2e:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Increase Watchers
+        run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
+      - name: Installing Dependencies
+        run: yarn
+      - name: Run Cypress
+        run: CYPRESS_baseUrl=https://backd.fund/ npx cypress run
