--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@percy/cli": "^1.0.0-beta.71",
+    "@percy/cypress": "^3.1.1",
     "@types/node": "^17.0.6",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
