:hedgehog: run percy in cd pipeline

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,8 +15,8 @@ jobs:
         run: yarn
       - name: Starting Server
         run: yarn start & npx wait-on http://localhost:3000
-      - name: Run Cypress
-        run: yarn run cy:run
+      - name: Run Cypress with Percy
+        run: yarn run percy
   deploy:
     needs: cypress_test
     runs-on: ubuntu-latest
