👷 add percy environment variable

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,6 +17,8 @@ jobs:
         run: yarn start & npx wait-on http://localhost:3000
       - name: Run Cypress with Percy
         run: yarn run percy
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
   deploy:
     needs: cypress_test
     runs-on: ubuntu-latest
