--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
         run: yarn start & npx wait-on http://localhost:3000
       - name: Run Cypress with Percy
         run: yarn run percy
+        env:
+          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
   preview_deploy:
     runs-on: ubuntu-latest
     steps:
