--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: Deploy to Firebase Hosting on merge
 "on":
   push:
     branches:
-      - master
+      - main
 jobs:
   cypress_test:
     runs-on: ubuntu-latest
