--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "photoshop-online",
+  "name": "react-photo-studio",
   "version": "0.2.0",
   "private": false,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "percy": "percy exec -- cypress run"
+    "test": "react-scripts test"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
@@ -26,8 +23,6 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "@percy/cli": "^1.0.0-beta.71",
-    "@percy/cypress": "^3.1.1",
     "@types/node": "^17.0.6",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
@@ -35,7 +30,6 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
-    "cypress": "^9.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
