:lipstick: update site name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Photoshop Online",
-  "name": "Photoshop Online the free online image editor",
+  "short_name": "React Photo Studio",
+  "name": "React Photo Studio the free online image editor",
   "icons": [
     {
       "src": "favicon.ico",
