--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Building App
         run: yarn run build
       - name: Install Firebase Tools
-        run: npm install -g firebase-tools@v14.3.1
+        run: npm install -g firebase-tools@13.35.1
       - name: Deploying to Firebase
         run: firebase deploy --token "${{ secrets.FIREBASE_SECRET }}"
